# quant

./: README.md  pyproject.toml  requirements.txt
src/data/: options.csv  price_hist.csv
src/quant/: app.py  compute_quant_tasks.py
